# btk-hackathon-2026

./: .dockerignore  .env.example  .env.microfon.example  .gitignore  Makefile  README.md  claude.md  docker-compose.prod.yml  docker-compose.yml  test_db.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7cad38199cf7_add_is_2fa_enabled.py  85190247a16c_add_autonomous_enabled_to_users.py  9a4c2b1d3e7f_add_closed_at_to_trades.py  e6e5f7724473_add_notification_preferences_to_users.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: agent.py  news_fetcher.py  price_fetcher.py  schemas.py
backend/app/api/v1/: ai.py  analytics.py  auth.py  market.py  router.py  savings.py  trades.py  transactions.py  users.py
backend/app/core/: __init__.py  redis.py  security.py
backend/app/db/: base.py  seed.py
backend/app/db/models/: __init__.py  saving.py  saving_entry.py  trade.py  transaction.py  user.py
backend/app/repositories/: saving_entry_repo.py  saving_repo.py  trade_repo.py  transaction_repo.py  user_repo.py
backend/app/schemas/: ai_insight.py  analytics.py  auth.py  market.py  saving.py  trade.py  transaction.py
backend/app/services/: auth_service.py  email_service.py  market_price_provider.py  saving_service.py  trading_service.py  transaction_service.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: trigger_ai_trade.py  weekly_accumulation.py
frontend/: default_shadcn_theme.css  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: i18n.ts  main.tsx
frontend/src/app/: App.tsx
simulator/: trigger_transactions.py
tests/: conftest.py  test_ai_advisor.py  test_ai_agent.py  test_analytics.py  test_market_price_provider.py  test_market_research.py  test_news_filter.py  test_paper_trade.py  test_transactions.py
traefik/: traefik.yml
traefik/dynamic/: routers.yml
(+43 files in other folders)
