[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btk-hackathon-backend"
version = "0.1.0"
description = "Micro-savings & AI-driven trading platform backend"
requires-python = ">=3.12"

dependencies = [
    # ── Web Framework ──────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # ── Database ───────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # ── Config & Validation ────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # ── Cache & Background Jobs ────────────────────────
    "redis>=5.0.4",
    "celery[redis]>=5.4.0",
    "celery-redbeat>=2.2.0",
    "flower>=2.0.1",

    # ── AI / LangChain + Gemini ────────────────────────
    "langchain>=0.2.6",
    "langchain-google-genai>=1.0.7",
    "langchain-community>=0.2.6",

    # ── HTTP Client (news fetcher) ─────────────────────
    "httpx>=0.27.0",
    "tenacity>=8.3.0",

    # ── Utilities ─────────────────────────────────────
    "structlog>=24.2.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
